fixed spacing issue cuasing scroll bars in anmation

--- a/src/components/home.scss
+++ b/src/components/home.scss
@@ -26,6 +26,7 @@ starts from row 2, column 2 and fills remaining space
 .title {
   text-align: center;
   font-size: 2rem;
+  margin-top: 25rem;
 }
 
 .title p {
